# lmic-esp-idf

./: CMakeLists.txt
src/hal/: hal.c
src/lmic/: lmic.c  oslmic.c  radio.c
